// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date input nested dependant components passes through label params without breaking 1`] = `

<label class="govuk-label govuk-date-input__label"
       for="dob-day"
>
  Day
</label>
<label class="govuk-label govuk-date-input__label"
       for="dob-month"
>
  Month
</label>
<label class="govuk-label govuk-date-input__label"
       for="dob-year"
>
  Year
</label>

`;

exports[`Date input passes through fieldset params without breaking 1`] = `

<fieldset aria-describedby="dob-hint"
          role="group"
          class="govuk-fieldset"
>
  <legend class="govuk-fieldset__legend">
  </legend>
</fieldset>

`;

exports[`Date input passes through html fieldset params without breaking 1`] = `

<fieldset aria-describedby="dob-error"
          role="group"
          class="govuk-fieldset"
>
  <legend class="govuk-fieldset__legend">
  </legend>
</fieldset>

`;

exports[`Date input when it includes a hint renders the hint 1`] = `

<span id="dob-errors-hint"
      text="For example, 31 3 1980"
      class="govuk-hint"
>
</span>

`;

exports[`Date input when it includes an error message renders the error message 1`] = `

<span id="dob-errors-error"
      text="Error message goes here"
      class="govuk-error-message"
>
</span>

`;
